<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".choice">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093"
        app:srcCompat="@drawable/hodavone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:background="@color/sh2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.252">

        <Button
            android:id="@+id/insert"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/add_new_customer"
            android:textColor="@color/black"
            app:backgroundTint="@color/sh3" />

        <Button
            android:id="@+id/show"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/show"
            android:textColor="@color/black"
            app:backgroundTint="@color/sh3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.365">

        <Button
            android:id="@+id/addbeggars"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/addbeggars"
            android:textColor="@color/black"
            app:backgroundTint="@color/sh3" />

        <Button
            android:id="@+id/showbeggars"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:text="@string/showbeggars"
            android:textColor="@color/black"
            app:backgroundTint="@color/sh3" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>