<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".ShowActivity">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/sh2"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/design_default_color_background"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/sh2"
                android:text="@string/type"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/phone_type"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/sh2"
                android:text="@string/f_money"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/money"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/sh2"
                android:text="@string/monthly"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/edittext4"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/sh2"
                android:text="@string/price"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/edittext5"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/sh2"
                android:text="@string/date"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/edittext6"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="100sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/sh2"
                android:text="@string/recentmoney"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/edittext7"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>